--- a/ral/process_data.ipynb
+++ b/ral/process_data.ipynb
@@ -60,11 +60,75 @@
     "# plt.figure(figsize=(15,5))\n",
     "# plt.plot(np.sum(motion, axis=1))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(382, 100, 63) (382,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import numpy as np\n",
+    "# import matplotlib.pyplot as plt\n",
+    "\n",
+    "labels = ['keep', 'stop']\n",
+    "labels_to_idx = {label: idx for idx, label in enumerate(labels)}\n",
+    "sequences = []\n",
+    "labels = []\n",
+    "target_length = 100\n",
+    "\n",
+    "root = '../datasets/same'\n",
+    "indices = np.arange(2000)[::10]\n",
+    "for file in os.listdir(root):\n",
+    "    if 'motion' in file:\n",
+    "        motion = np.load(os.path.join(root, file))[:2000]\n",
+    "        # get slice every 10 frames\n",
+    "        for idx in indices:\n",
+    "            if motion[idx:idx+100].shape[0] != 100:\n",
+    "                continue\n",
+    "            else:\n",
+    "                sequences.append(motion[idx:idx+100])\n",
+    "                labels.append(labels_to_idx[file.split('_')[1]])\n",
+    "\n",
+    "sequences = np.stack(sequences).reshape(-1, target_length, 63)\n",
+    "labels = np.array(labels)\n",
+    "print(sequences.shape, labels.shape)\n",
+    "np.savez('../datasets/same/motion_datasets.npz', sequences=sequences, labels=labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "mesh",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
